# wh_task

./: .gitignore  GEMINI.md  README.md  pyproject.toml  pytest.ini
api_test/: run.py
api_test/api/: base_api.py  menu_api.py  order_api.py
api_test/codes/: response.py  settings.py
api_test/common/: data_handler.py
api_test/config/: domain.py
api_test/core/: api_client.py
api_test/model/: add_api_res_report.py  assert_model.py  dto.py  mock_res.py
api_test/service/: order_service.py
api_test/service/step/: order_step.py
api_test/tests/: conftest.py
api_test/tests/scenario/: test_menu.py  test_order_create.py
app/core/: api_client.py
output/: SystemArchitecture.md  과제_테스트케이스.xlsx  아키텍쳐설명문서.md  프로젝트_설계_문서.md
results/allure-report/250817/250817_003056/: index.html
results/allure-report/250817/250817_003056/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
results/allure-report/250817/250817_003056/data/attachments/: 122124b24d02cc1c.json  1a4537567c8f6d51.json  5a156693fe4c4036.json  657ab9dfa2eb795b.json  7204537026f50ef3.json  8e9548863e478d24.json  a8a321f6976e88dd.json  bd90f43c08722e0c.json  c3f5d7c44288bee4.json  ee8e5306abd12ce2.json
results/allure-report/250817/250817_003056/data/test-cases/: 25351cf3a800952d.json  3aca4766174f1998.json  415d2bdfb66cacf2.json  4c8b64c8703211b1.json  556b2b1e2c485e27.json  5ac60b089571379d.json  627c41e4d1efa42a.json  8261e82458ebc18c.json  87c0ff088e841e0a.json  9658501a0ecdc558.json  (+11 more)
results/allure-report/250817/250817_003056/export/: influxDbData.txt  prometheusData.txt
results/allure-report/250817/250817_003056/history/: history.json
results/allure-report/250817/250817_003056/widgets/: behaviors.json  duration.json  severity.json  suites.json  summary.json
results/allure-report/250817/250817_133706/: index.html
results/allure-report/250817/250817_133706/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
results/allure-report/250817/250817_133706/export/: influxDbData.txt  prometheusData.txt
results/allure-report/250817/250817_133706/history/: history.json
results/allure-report/250817/250817_133706/widgets/: duration.json  severity.json  suites.json  summary.json
scripts/: test_run.bat  test_run.sh
(+37 files in other folders)
